--- a/desktop/src/main/resources/org/example/desktop/punto-venta-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/punto-venta-view.fxml
@@ -22,15 +22,23 @@
         <HBox styleClass="pv-main-container" spacing="30.0">
             <children>
 
-                <!-- Panel de productos -->
                 <VBox styleClass="pv-product-panel" prefWidth="800.0">
                     <children>
-                        <Label text="📋 Catálogo de Productos" styleClass="pv-panel-title">
-                            <font>
-                                <Font name="System Bold" size="20.0" />
-                            </font>
-                        </Label>
 
+                        <!-- Título + botón a la derecha -->
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                            <children>
+                                <Label text="📋 Catálogo de Productos" styleClass="pv-panel-title">
+                                    <font>
+                                        <Font name="System Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Pane HBox.hgrow="ALWAYS"/>
+                                <Button text="Historial de ventas" styleClass="button" fx:id="btnHistorialVentas"/>
+                            </children>
+                        </HBox>
+
+                        <!-- Scroll con el catálogo -->
                         <ScrollPane fitToWidth="true" styleClass="pv-products-scroll" prefHeight="600.0">
                             <content>
                                 <GridPane fx:id="productGrid" hgap="20.0" vgap="20.0" styleClass="pv-products-grid">
@@ -38,11 +46,13 @@
                                 </GridPane>
                             </content>
                         </ScrollPane>
+
                     </children>
                 </VBox>
 
+
                 <!-- Panel del carrito -->
-                <VBox styleClass="pv-cart-panel" prefWidth="470.0">
+                <VBox styleClass="pv-cart-panel" prefWidth="600.0">
                     <children>
                         <Label fx:id="cartTitleLabel" text="🛒 Carrito de Compras (0)" styleClass="pv-panel-title">
                             <font>
@@ -108,8 +118,7 @@
     </center>
 
     <stylesheets>
-        <!--<URL value="@estilos/estilos-globales.css" />
-        <URL value="@estilos/tabla.css" /> -->
+        <URL value="@estilos/estilos-globales.css" />
         <URL value="@estilos/punto-venta.css" />
     </stylesheets>
 </BorderPane>
